[STREAMPIPES-145] Improve CSS theming

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -26,7 +26,7 @@
               }
             ],
             "styles": [
-              "src/scss/main.scss",
+              "src/scss/main.scss"
             ],
             "scripts": [
               "node_modules/systemjs/dist/system.js",
