--- a/streampipes-wrapper-python/requirements.txt
+++ b/streampipes-wrapper-python/requirements.txt
@@ -5,6 +5,7 @@ click==7.1.2
 confluent-kafka==1.4.2
 Flask==1.1.2
 Flask-Classful==0.14.2
+Flask-Negotiate==0.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -13,5 +14,4 @@ python-consul==1.1.0
 requests==2.24.0
 six==1.15.0
 urllib3==1.25.10
-waitress==1.4.4
 Werkzeug==1.0.1
