[STREAMPIPES-191] Remove MyElements view

--- a/ui/deployment/rel/config.yml
+++ b/ui/deployment/rel/config.yml
@@ -22,7 +22,7 @@ modules:
   - spPipelines
   - spConnect
   - spDashboard
+  - spDataExplorer
   - spAppOverview
   - spAdd
-  - spMyElements
   - spConfiguration
