[STREAMPIPES-193] Remove AngularJS dependencies from package.json

--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,10 @@
     "start": "node ./deployment/prebuild.js && ng serve",
     "watchtest": "node ./deployment/prebuild.js && karma start ./karma.conf.js --no-auto-watch --single-run",
     "test": "node ./deployment/prebuild.js && karma start ./karma.conf.js",
-    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod",
+    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod --stats-json",
     "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && ng build --prod",
-    "lint": "tslint -c tslint.json 'src/**/*.ts*"
+    "lint": "tslint -c tslint.json 'src/**/*.ts*",
+    "analyze": "webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
     "@angular/animations": "9.0.5",
@@ -35,36 +36,15 @@
     "@ngui/datetime-picker": "0.16.2",
     "@stomp/ng2-stompjs": "7.2.0",
     "@swimlane/ngx-charts": "13.0.2",
-    "@uirouter/angular": "6.0.1",
-    "@uirouter/angular-hybrid": "10.0.1",
-    "@uirouter/angularjs": "1.0.25",
-    "@uirouter/core": "6.0.4",
-    "@uirouter/rx": "0.6.5",
-    "angular": "1.7.7",
-    "angular-animate": "1.7.7",
-    "angular-aria": "1.7.7",
-    "angular-clipboard": "1.4.2",
-    "angular-cookies": "1.7.7",
-    "angular-datatables": "0.6.2",
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
-    "angular-material": "1.1.18",
     "angular-material-icons": "0.4.0",
-    "angular-messages": "1.7.7",
     "angular-notification-icons": "0.4.4",
     "angular-plotly.js": "1.5.0",
-    "angular-resource": "1.7.7",
-    "angular-route": "1.7.7",
-    "angular-rt-popup": "1.0.6",
-    "angular-sanitize": "1.7.7",
     "angular-slick-carousel": "3.1.7",
-    "angular-touch": "1.7.7",
     "angular-tree-component": "8.5.6",
-    "angular-ui-bootstrap": "0.14.3",
-    "angular-ui-sortable": "0.13.4",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
-    "angularjs-datetime-picker": "0.1.16",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
     "codemirror": "5.55.0",
@@ -152,9 +132,9 @@
     "typescript": "3.7.5",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
