--- a/ui/package.json
+++ b/ui/package.json
@@ -38,6 +38,7 @@
     "@ngx-loading-bar/http-client": "5.1.0",
     "@stomp/ng2-stompjs": "7.2.0",
     "@swimlane/ngx-charts": "13.0.2",
+    "angular-datatables": "9.0.2",
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
     "angular-material-icons": "0.4.0",
@@ -52,6 +53,7 @@
     "codemirror": "5.55.0",
     "core-js": "2.5.3",
     "dagre": "0.8.4",
+    "datatables.net-dt": "1.10.21",
     "datatables.net": "1.10.20",
     "fast-json-patch": "2.1.0",
     "file-saver": "1.3.8",
