--- a/ui/deployment/modules.yml
+++ b/ui/deployment/modules.yml
@@ -19,13 +19,13 @@ spEditor:
   ng1_controller: ''
   ng5_moduleName: 'EditorModule'
   ng5_component: 'EditorComponent'
-  ng5_componentPath: '../editor/editor.component'
+  ng5_componentPath: './editor/editor.component'
   path: './editor/editor.module'
-  link: 'streampipes.editor'
+  link: 'editor'
   url: '/editor/:pipeline'
   title: 'Editor'
   description: 'editor'
-  icon: 'action:ic_dashboard_24px'
+  icon: 'dashboard'
   homeImage: '/assets/img/home/editor.png'
   admin: false
 spConnect:
@@ -33,13 +33,13 @@ spConnect:
   ng1_templateUrl: ''
   ng5_moduleName: 'ConnectModule'
   ng5_component: 'ConnectComponent'
-  ng5_componentPath: '../connect/connect.component'
+  ng5_componentPath: './connect/connect.component'
   path: './connect/connect.module'
-  link: 'streampipes.connect'
+  link: 'connect'
   url: '/connect'
   title: 'StreamPipes Connect'
   description: 'Missing Description'
-  icon: 'notification:ic_power_24px'
+  icon: 'power'
   homeImage: '/assets/img/home/editor.png'
   admin: False
 spPipelines:
@@ -47,13 +47,13 @@ spPipelines:
   ng1_templateUrl: ''
   ng5_moduleName: 'PipelinesModule'
   ng5_component: 'PipelinesComponent'
-  ng5_componentPath: '../pipelines/pipelines.component'
+  ng5_componentPath: './pipelines/pipelines.component'
   path: './pipelines/pipelines.module'
-  link: 'streampipes.pipelines'
+  link: 'pipelines'
   url: '/pipelines/:pipeline'
   title: 'Pipelines'
   description: 'Pipelines'
-  icon: 'av:ic_play_arrow_24px'
+  icon: 'play_arrow'
   homeImage: '/assets/img/home/pipelines.png'
   admin: False
 spSensors:
@@ -74,13 +74,13 @@ spAdd:
   ng1_templateUrl: ''
   ng5_moduleName: 'AddModule'
   ng5_component: 'AddComponent'
-  ng5_componentPath: '../add/add.component'
+  ng5_componentPath: './add/add.component'
   path: './add/add.module'
-  link: 'streampipes.add'
+  link: 'add'
   url: '/add'
   title: 'Install Pipeline Elements'
   description: 'The marketplace can be used to extend StreamPipes with new algorithms and data sinks'
-  icon: 'file:ic_cloud_download_24px'
+  icon: 'cloud_download'
   homeImage: '/assets/img/home/add.png'
   admin: True
 spConfiguration:
@@ -89,13 +89,13 @@ spConfiguration:
   ng1_controller: ''
   ng5_moduleName: 'ConfigurationModule'
   ng5_component: 'ConfigurationComponent'
-  ng5_componentPath: '../configuration/configuration.component'
+  ng5_componentPath: './configuration/configuration.component'
   path: './configuration/configuration.module'
-  link: 'streampipes.configuration'
+  link: 'configuration'
   url: '/configuration'
   title: 'Configuration'
   description: 'Configuration'
-  icon: 'action:ic_settings_24px'
+  icon: 'settings'
   homeImage: '/assets/img/home/configuration.png'
   admin: True
 spAppOverview:
@@ -104,13 +104,13 @@ spAppOverview:
   ng1_controller: ''
   ng5_moduleName: 'AppOverviewModule'
   ng5_component: 'AppOverviewComponent'
-  ng5_componentPath: '../app-overview/app-overview.component'
+  ng5_componentPath: './app-overview/app-overview.component'
   path: './app-overview/app-overview.module'
-  link: 'streampipes.app-overview'
+  link: 'app-overview'
   url: '/apps'
   title: 'Apps'
-  description: 'app-overview'
-  icon: 'navigation:ic_apps_24px'
+  description: 'App Overview'
+  icon: 'apps'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
 spDashboard:
@@ -119,13 +119,13 @@ spDashboard:
   ng1_controller: ''
   ng5_moduleName: 'DashboardModule'
   ng5_component: 'DashboardComponent'
-  ng5_componentPath: '../dashboard/dashboard.component'
+  ng5_componentPath: './dashboard/dashboard.component'
   path: './dashboard/dashboard.module'
-  link: 'streampipes.dashboard'
+  link: 'dashboard'
   url: '/dashboard'
   title: 'Dashboard'
   description: 'The live dashboard visualizes data in real-time'
-  icon: 'editor:ic_insert_chart_24px'
+  icon: 'insert_chart'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
 spDataExplorer:
@@ -134,12 +134,12 @@ spDataExplorer:
   ng1_controller: ''
   ng5_moduleName: 'DataExplorerModule'
   ng5_component: 'DataExplorerComponent'
-  ng5_componentPath: '../data-explorer/data-explorer.component'
+  ng5_componentPath: './data-explorer/data-explorer.component'
   path: './data-explorer/data-explorer.module'
-  link: 'streampipes.dataexplorer'
+  link: 'dataexplorer'
   url: '/dataexplorer'
   title: 'Data Explorer'
   description: 'data-explorer'
-  icon: 'action:ic_search_24px'
+  icon: 'search'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
