--- a/ui/package.json
+++ b/ui/package.json
@@ -42,9 +42,7 @@
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
     "angular-material-icons": "0.4.0",
-    "angular-notification-icons": "0.4.4",
     "angular-plotly.js": "1.5.0",
-    "angular-slick-carousel": "3.1.7",
     "angular-tree-component": "8.5.6",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
@@ -75,9 +73,7 @@
     "ng-prettyjson": "0.1.8",
     "ngx-showdown": "5.1.0",
     "ng-simple-slideshow": "1.2.9",
-    "ng2-charts": "2.0.3",
     "ng2-dragula": "1.5.0",
-    "ngmap": "1.18.0",
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
     "ngx-quill": "12.0.1",
@@ -89,7 +85,6 @@
     "rxjs-compat": "6.3.3",
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
-    "slick-carousel": "1.6.0",
     "systemjs": "0.21.6",
     "tslib": "1.11.1",
     "zone.js": "0.10.2"
@@ -134,10 +129,10 @@
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "3.7.5",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "webpack-merge": "^4.2.1",
     "webpack-bundle-analyzer": "^3.8.0"
   }
