--- a/ui/package.json
+++ b/ui/package.json
@@ -17,21 +17,21 @@
     "analyze": "webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
-    "@angular/animations": "9.0.5",
-    "@angular/cdk": "9.1.1",
-    "@angular/common": "9.0.5",
-    "@angular/compiler": "9.0.5",
-    "@angular/core": "9.0.5",
-    "@angular/flex-layout": "9.0.0-beta.29",
-    "@angular/forms": "9.0.5",
-    "@angular/material": "9.1.1",
-    "@angular/platform-browser": "9.0.5",
-    "@angular/platform-browser-dynamic": "9.0.5",
-    "@angular/router": "9.0.5",
-    "@angular/upgrade": "9.0.5",
+    "@angular/animations": "10.0.9",
+    "@angular/cdk": "10.1.3",
+    "@angular/common": "10.0.9",
+    "@angular/compiler": "10.0.9",
+    "@angular/core": "10.0.9",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "10.0.9",
+    "@angular/material": "10.1.3",
+    "@angular/platform-browser": "10.0.9",
+    "@angular/platform-browser-dynamic": "10.0.9",
+    "@angular/router": "10.0.9",
+    "@angular/upgrade": "10.0.9",
     "@asymmetrik/ngx-leaflet": "6.0.1",
     "@ctrl/ngx-codemirror": "3.1.3",
-    "@danielmoncada/angular-datetime-picker": "9.2.0",
+    "@danielmoncada/angular-datetime-picker": "10.0.0",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@ngui/datetime-picker": "0.16.2",
     "@ngx-loading-bar/core": "5.1.0",
@@ -64,7 +64,7 @@
     "jszip": "3.2.1",
     "konva": "3.2.4",
     "leaflet": "1.6.0",
-    "lodash": "3.10.1",
+    "lodash": "4.17.20",
     "material-design-icons": "3.0.1",
     "moment": "2.24.0",
     "ng-dynamic-component": "4.0.3",
@@ -81,19 +81,19 @@
     "prismjs": "1.16.0",
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
-    "rxjs": "6.3.3",
+    "rxjs": "6.6.2",
     "rxjs-compat": "6.3.3",
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
     "systemjs": "0.21.6",
-    "tslib": "1.11.1",
-    "zone.js": "0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^8.4.1",
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "9.0.5",
-    "@angular/compiler-cli": "9.0.5",
+    "@angular-builders/custom-webpack": "10.0.0",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular/cli": "10.0.6",
+    "@angular/compiler-cli": "10.0.9",
     "@ngtools/webpack": "9.0.2",
     "@types/angular": "^1.6.43",
     "@types/jasmine": "~2.8.3",
@@ -102,21 +102,21 @@
     "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
     "@types/showdown": "1.9.3",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "copy-webpack-plugin": "^5.0.2",
     "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.5.0",
     "js-yaml": "^3.10.0",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-verbose-reporter": "0.0.6",
     "mini-css-extract-plugin": "^0.9.0",
     "mustache": "^2.3.0",
@@ -126,9 +126,9 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
-    "tslint": "^5.15.0",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "3.7.5",
+    "typescript": "3.9.7",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
