--- a/ui/deployment/modules.yml
+++ b/ui/deployment/modules.yml
@@ -23,8 +23,8 @@ spEditor:
   path: './editor/editor.module'
   link: 'editor'
   url: '/editor/:pipeline'
-  title: 'Editor'
-  description: 'editor'
+  title: 'Pipeline Editor'
+  description: 'The pipeline editor lets you create flexible data pipelines based on installed data streams, data sets, data processors and data sinks.'
   icon: 'dashboard'
   homeImage: '/assets/img/home/editor.png'
   admin: false
@@ -37,8 +37,8 @@ spConnect:
   path: './connect/connect.module'
   link: 'connect'
   url: '/connect'
-  title: 'StreamPipes Connect'
-  description: 'Missing Description'
+  title: 'Connect'
+  description: 'StremPipes Connect lets you easily connect new data sources for a variety of data formats and protocols.'
   icon: 'power'
   homeImage: '/assets/img/home/editor.png'
   admin: False
@@ -52,7 +52,7 @@ spPipelines:
   link: 'pipelines'
   url: '/pipelines/:pipeline'
   title: 'Pipelines'
-  description: 'Pipelines'
+  description: 'All created pipelines are available in the pipeline view, where you can also start and stop pipelines.'
   icon: 'play_arrow'
   homeImage: '/assets/img/home/pipelines.png'
   admin: False
@@ -79,7 +79,7 @@ spAdd:
   link: 'add'
   url: '/add'
   title: 'Install Pipeline Elements'
-  description: 'The marketplace can be used to extend StreamPipes with new algorithms and data sinks'
+  description: 'The pipeline element installation module can be used to extend StreamPipes with new algorithms and data sinks'
   icon: 'cloud_download'
   homeImage: '/assets/img/home/add.png'
   admin: True
@@ -94,7 +94,7 @@ spConfiguration:
   link: 'configuration'
   url: '/configuration'
   title: 'Configuration'
-  description: 'Configuration'
+  description: 'In the configuration module, basic StreamPipes settings and services can be configured.'
   icon: 'settings'
   homeImage: '/assets/img/home/configuration.png'
   admin: True
@@ -109,7 +109,7 @@ spAppOverview:
   link: 'app-overview'
   url: '/apps'
   title: 'Apps'
-  description: 'App Overview'
+  description: 'The app overview allows you to view and open additional StreamPipes plugins.'
   icon: 'apps'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
@@ -124,7 +124,7 @@ spDashboard:
   link: 'dashboard'
   url: '/dashboard'
   title: 'Dashboard'
-  description: 'The live dashboard visualizes data in real-time'
+  description: 'The live dashboard visualizes data in real-time.'
   icon: 'insert_chart'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
@@ -139,7 +139,7 @@ spDataExplorer:
   link: 'dataexplorer'
   url: '/dataexplorer'
   title: 'Data Explorer'
-  description: 'data-explorer'
+  description: 'The data explorer lets you visually inspect historical data from your connected sources.'
   icon: 'search'
   homeImage: '/assets/img/home/configuration.png'
   admin: false
