--- a/cli/bin/templates/env.template
+++ b/cli/bin/templates/env.template
@@ -14,8 +14,7 @@
 # limitations under the License.
 
 SP_DOCKER_REGISTRY=apachestreampipes/
-SP_BACKEND_VERSION=##VERSION##
-SP_PE_VERSION=##VERSION##
+SP_VERSION=##VERSION##
 SP_SUBNET=172.31.0.0/16
 SP_CONSUL_CONTAINER_IP=172.31.0.9
 COMPOSE_PROJECT_NAME=streampipes
