--- a/cli/deploy/standalone/connect-worker-main/docker-compose.yml
+++ b/cli/deploy/standalone/connect-worker-main/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   connect-worker-main:
-    image: ${SP_DOCKER_REGISTRY}connect-worker:${SP_BACKEND_VERSION}
+    image: ${SP_DOCKER_REGISTRY}connect-worker:${SP_VERSION}
     depends_on:
       - consul
       - couchdb
