--- a/cli/deploy/standalone/sinks-brokers-jvm/docker-compose.yml
+++ b/cli/deploy/standalone/sinks-brokers-jvm/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   sinks-brokers-jvm:
-    image: ${SP_DOCKER_REGISTRY}sinks-brokers-jvm:${SP_PE_VERSION}
+    image: ${SP_DOCKER_REGISTRY}sinks-brokers-jvm:${SP_VERSION}
     depends_on:
       - "consul"
     logging:
