--- a/cli/deploy/standalone/sinks-databases-flink/docker-compose.yml
+++ b/cli/deploy/standalone/sinks-databases-flink/docker-compose.yml
@@ -16,7 +16,7 @@
 version: "3.4"
 services:
   sinks-databases-flink:
-    image: ${SP_DOCKER_REGISTRY}sinks-databases-flink:${SP_PE_VERSION}
+    image: ${SP_DOCKER_REGISTRY}sinks-databases-flink:${SP_VERSION}
     depends_on:
       - "consul"
       - "jobmanager"      
