--- a/ui/package.json
+++ b/ui/package.json
@@ -59,7 +59,6 @@
     "jquery-ui-dist": "1.12.1",
     "jquery.panzoom": "2.0.5",
     "jshint": "2.11.1",
-    "jsonld": "0.4.12",
     "jsplumb": "2.1.3",
     "jszip": "3.2.1",
     "konva": "3.2.4",
@@ -67,7 +66,6 @@
     "lodash": "4.17.20",
     "material-design-icons": "3.0.1",
     "moment": "2.24.0",
-    "ng-dynamic-component": "4.0.3",
     "ng-file-upload": "9.0.13",
     "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
@@ -82,7 +80,6 @@
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
     "rxjs": "6.6.2",
-    "rxjs-compat": "6.3.3",
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
     "systemjs": "0.21.6",
@@ -94,7 +91,7 @@
     "@angular-devkit/build-angular": "~0.1000.6",
     "@angular/cli": "10.0.6",
     "@angular/compiler-cli": "10.0.9",
-    "@ngtools/webpack": "9.0.2",
+    "@ngtools/webpack": "^10.0.7",
     "@types/angular": "^1.6.43",
     "@types/jasmine": "~2.8.3",
     "@types/jqueryui": "^1.12.7",
