--- a/cli/deploy/standalone/backend/docker-compose.yml
+++ b/cli/deploy/standalone/backend/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - couchdb
     volumes:
       - backend:/root/.streampipes
+      - spImagesDatalake:/spImages
     logging:
       driver: "json-file"
       options:
@@ -32,6 +33,7 @@ services:
 
 volumes:
   backend:
+  spImagesDatalake:
 
 networks:
   spnet:
