renamed docker volume for image storage, refactored k8s deployment option, edit README

--- a/cli/deploy/standalone/backend/docker-compose.yml
+++ b/cli/deploy/standalone/backend/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - couchdb
     volumes:
       - backend:/root/.streampipes
-      - spImagesDatalake:/spImages
+      - files:/spImages
     logging:
       driver: "json-file"
       options:
@@ -33,7 +33,7 @@ services:
 
 volumes:
   backend:
-  spImagesDatalake:
+  files:
 
 networks:
   spnet:
