--- a/cli/deploy/standalone/influxdb/docker-compose.yml
+++ b/cli/deploy/standalone/influxdb/docker-compose.yml
@@ -22,9 +22,7 @@ services:
       - INFLUXDB_REPORTING_DISABLED=false
       - INFLUXDB_ADMIN_ENABLED=true
     volumes:
-      # Data persistency
-      # sudo mkdir -p /srv/docker/influxdb/data
-      - influx:/var/lib/influxdb
+      - influxdb:/var/lib/influxdb
     logging:
       driver: "json-file"
       options:
@@ -34,7 +32,7 @@ services:
       spnet:
 
 volumes:
-  influx:
+  influxdb:
 
 networks:
   spnet:
