--- a/compose/docker-compose.full.yml
+++ b/compose/docker-compose.full.yml
@@ -32,6 +32,7 @@ services:
       - couchdb
     volumes:
       - backend:/root/.streampipes
+      - files:/spImages
     logging: *default-logging
     networks:
       spnet:
@@ -132,8 +133,7 @@ services:
   zookeeper:
     image: fogsyio/zookeeper:3.4.13
     volumes:
-      - zk-conf:/opt/zookeeper-3.4.13/conf
-      - zk-data:/opt/zookeeper-3.4.13/data
+      - zookeeper:/opt/zookeeper-3.4.13
     logging: *default-logging
     networks:
       spnet:
@@ -145,7 +145,7 @@ services:
       - INFLUXDB_REPORTING_DISABLED=false
       - INFLUXDB_ADMIN_ENABLED=true
     volumes:
-      - influx:/var/lib/influxdb
+      - influxdb:/var/lib/influxdb
     logging: *default-logging
     networks:
       spnet:
@@ -177,7 +177,9 @@ services:
   pipeline-elements-all-jvm:
     image: "${SP_DOCKER_REGISTRY}/pipeline-elements-all-jvm:${SP_VERSION}"
     depends_on:
-      - "consul"
+      - consul
+    volumes:
+      - files:/spImages
     logging: *default-logging
     networks:
       spnet:
@@ -185,8 +187,8 @@ services:
   sources-watertank-simulator:
     image: "${SP_DOCKER_REGISTRY}/sources-watertank-simulator:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "kafka"
+      - consul
+      - kafka
     logging: *default-logging
     networks:
       spnet:
@@ -195,8 +197,8 @@ services:
   processors-aggregation-flink:
     image: "${SP_DOCKER_REGISTRY}/processors-aggregation-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -204,8 +206,8 @@ services:
   processors-enricher-flink:
     image: "${SP_DOCKER_REGISTRY}/processors-enricher-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -213,8 +215,8 @@ services:
   processors-pattern-detection-flink:
     image: "${SP_DOCKER_REGISTRY}/processors-pattern-detection-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -222,8 +224,8 @@ services:
   processors-statistics-flink:
     image: "${SP_DOCKER_REGISTRY}/processors-statistics-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -231,8 +233,8 @@ services:
   processors-transformation-flink:
     image: "${SP_DOCKER_REGISTRY}/processors-transformation-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -240,8 +242,8 @@ services:
   sinks-databases-flink:
     image: "${SP_DOCKER_REGISTRY}/sinks-databases-flink:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "jobmanager"
+      - consul
+      - jobmanager
     logging: *default-logging
     networks:
       spnet:
@@ -249,8 +251,8 @@ services:
   sources-vehicle-simulator:
     image: "${SP_DOCKER_REGISTRY}/sources-vehicle-simulator:${SP_VERSION}"
     depends_on:
-      - "consul"
-      - "kafka"
+      - consul
+      - kafka
     logging: *default-logging
     networks:
       spnet:
@@ -262,9 +264,9 @@ volumes:
   connect:
   couchdb:
   kafka:
-  zk-conf:
-  zk-data:
-  influx:
+  zookeeper:
+  influxdb:
+  files:
 
 
 networks:
