--- a/ui/nginx_config/ssl.conf
+++ b/ui/nginx_config/ssl.conf
@@ -28,6 +28,16 @@ server {
 
   root /usr/share/nginx/html;
 
+  # Enable gzip compression
+  gzip on;
+  gzip_static on;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_proxied  any;
+  gzip_vary on;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+
   # StreamPipes
 
   location /streampipes-backend {
@@ -36,36 +46,24 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://connect-master:8099/;
+    proxy_pass http://$upstream;
     proxy_ssl_session_reuse off;
     proxy_set_header Host $http_host;
     proxy_redirect off;
   }
 
   location /streampipes-connect/ {
- #   set $upstream connect-master:8099;
+  #    set $upstream connect-master:8099;
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-NginX-Proxy true;
     if ($request_uri ~* "/streampipes-connect/(.*)") {
-       proxy_pass  http://connect-master:8099/$1;
+      proxy_pass  http://connect-master:8099/$1;
     }
     proxy_ssl_session_reuse off;
     proxy_set_header Host $http_host;
   }
-
-#  location /streampipes-backend-ee {
-#    set $upstream backend-ee:8030;
-#
-#    proxy_set_header X-Real-IP $remote_addr;
-#    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#    proxy_set_header X-NginX-Proxy true;
-#    proxy_pass http://$upstream;
-#    proxy_ssl_session_reuse off;
-#    proxy_set_header Host $http_host;
-#    proxy_redirect off;
-#  }
 
   location /visualizablepipeline {
     set $upstream couchdb:5984;
@@ -150,19 +148,6 @@ server {
     proxy_set_header Host $http_host;
     proxy_redirect off;
   }
-
-  location /kibana {
-    set $upstream kibana:5601;
-
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://$upstream;
-    proxy_ssl_session_reuse off;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-  }
-
 
   #error_page  404              /404.html;
 
