--- a/pom.xml
+++ b/pom.xml
@@ -891,7 +891,7 @@
         <developerConnection>scm:git:ssh://git@github.com/apache/incubator-streampipes-extensions.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/apache/incubator-streampipes-extensions.git</connection>
         <url>https://github.com/apache/incubator-streampipes-extensions</url>
-      <tag>HEAD</tag>
+      <tag>rel/0.67.0</tag>
   </scm>
 
 </project>
