--- a/archetypes/streampipes-archetype-pe-processors-flink/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/streampipes-archetype-pe-processors-flink/src/main/resources/archetype-resources/pom.xml
@@ -25,7 +25,7 @@
     <version>${version}</version>
 
     <properties>
-        <sp.version>0.67.0-SNAPSHOT</sp.version>
+        <sp.version>0.68.0-SNAPSHOT</sp.version>
     </properties>
 
     <dependencies>
@@ -173,7 +173,7 @@
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${package}.main.Init</mainClass>
+                                    <mainClass>${package}.Init</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
