--- a/archetypes/streampipes-archetype-pe-sources/src/main/resources/archetype-resources/Dockerfile
+++ b/archetypes/streampipes-archetype-pe-sources/src/main/resources/archetype-resources/Dockerfile
@@ -16,11 +16,8 @@
 FROM adoptopenjdk/openjdk8-openj9:alpine-slim
 
 ENV CONSUL_LOCATION consul
-
 EXPOSE 8090
 
-RUN echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf
+COPY target/${artifactId}.jar  /streampipes-processing-element-container.jar
 
-COPY target/${artifactId}.jar  /${artifactId}.jar
-
-ENTRYPOINT ["java", "-jar", "/${artifactId}.jar"]
+ENTRYPOINT ["java", "-jar", "/streampipes-processing-element-container.jar"]
