[hotfix] Resolve dependency convergence issues

--- a/streampipes-app-file-export/pom.xml
+++ b/streampipes-app-file-export/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>lightcouch</artifactId>
         </dependency>
 
+        <!-- dependency convergence -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
 
     </dependencies>
