--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -33,7 +33,7 @@
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-connect-container-worker</artifactId>
-                <version>0.68.0-SNAPSHOT</version>
+                <version>${streampipes.version}</version>
             </dependency>
 
             <!-- External dependencies -->
