--- a/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -31,67 +31,67 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-filters-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-image-processing-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-filters-siddhi</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-text-mining-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-transformation-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sinks-brokers-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sinks-databases-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sinks-internal-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-sinks-notifications-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-enricher-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-processors-geo-jvm</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
 
