--- a/streampipes-sources-watertank-simulator/pom.xml
+++ b/streampipes-sources-watertank-simulator/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-pipeline-elements-data-simulator</artifactId>
-            <version>0.68.0-SNAPSHOT</version>
+            <version>${streampipes.version}</version>
         </dependency>
 
         <!-- StreamPipes dependencies -->
