[STREAMPIPES-225] add pipeline-elements-all-flink module

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <module>streampipes-pipeline-elements-all-jvm</module>
         <module>streampipes-pipeline-elements-data-simulator</module>
         <module>streampipes-connect-adapters</module>
+        <module>streampipes-pipeline-elements-all-flink</module>
     </modules>
 
     <properties>
