--- a/cli/deploy/standalone/pipeline-elements-all-flink/docker-compose.dev.yml
+++ b/cli/deploy/standalone/pipeline-elements-all-flink/docker-compose.dev.yml
@@ -13,19 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if (eq .Values.deployment "full") }}
-apiVersion: v1
-kind: Service
-metadata:
-  name: sources-watertank-simulator
-  labels:
-    name: sources-watertank-simulator
-spec:
-  selector:
-    app: sources-watertank-simulator
-  ports:
-    - name: main
-      protocol: TCP
-      port: 8090
-      targetPort: 8090
-{{- end }}
+version: "3.4"
+services:
+  pipeline-elements-all-flink:
+#    ports:
+#      - "8098:8090"
