--- a/k8s/templates/extensions/pipeline-elements/pipeline-elements-all-flink-deployment.yaml
+++ b/k8s/templates/extensions/pipeline-elements/pipeline-elements-all-flink-deployment.yaml
@@ -17,24 +17,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: processors-transformation-jvm
+  name: pipeline-elements-all-flink
 spec:
   selector:
     matchLabels:
-      app: processors-transformation-jvm
+      app: pipeline-elements-all-flink
   replicas: 1
   template:
     metadata:
       labels:
-        app: processors-transformation-jvm
+        app: pipeline-elements-all-flink
     spec:
       initContainers:
         - name: init-wait-consul
           image: alpine
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 consul 8600 && exit 0 || sleep 3; done; exit 1"]
+        - name: init-wait-jobmanager
+          image: alpine
+          command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 jobmanager 8081 && exit 0 || sleep 3; done; exit 1"]
       containers:
-        - name: processors-transformation-jvm
-          image: {{ .Values.streampipes.registry }}/processors-transformation-jvm:{{ .Values.streampipes.version }}
+        - name: pipeline-elements-all-flink
+          image: {{ .Values.streampipes.registry }}/pipeline-elements-all-flink:{{ .Values.streampipes.version }}
           imagePullPolicy: {{ .Values.pullPolicy }}
           ports:
             - containerPort: 8090
