--- a/k8s/templates/extensions/pipeline-elements/pipeline-elements-all-jvm-deployment.yaml
+++ b/k8s/templates/extensions/pipeline-elements/pipeline-elements-all-jvm-deployment.yaml
@@ -13,29 +13,35 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if (eq .Values.deployment "full") }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: processors-image-processing-jvm
+  name: pipeline-elements-all-jvm
 spec:
   selector:
     matchLabels:
-      app: processors-image-processing-jvm
+      app: pipeline-elements-all-jvm
   replicas: 1
   template:
     metadata:
       labels:
-        app: processors-image-processing-jvm
+        app: pipeline-elements-all-jvm
     spec:
       initContainers:
         - name: init-wait-consul
           image: alpine
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 consul 8600 && exit 0 || sleep 3; done; exit 1"]
+    spec:
+      volumes:
+        - name: files-pv
+          persistentVolumeClaim:
+            claimName: files-pvc          
       containers:
-        - name: processors-image-processing-jvm
-          image: {{ .Values.streampipes.registry }}/processors-image-processing-jvm:{{ .Values.streampipes.version }}
+        - name: pipeline-elements-all-jvm
+          image: {{ .Values.streampipes.registry }}/pipeline-elements-all-jvm:{{ .Values.streampipes.version }}
           imagePullPolicy: {{ .Values.pullPolicy }}
           ports:
             - containerPort: 8090
-{{- end }}
+          volumeMounts:
+            - mountPath: "/spImages"
+              name: files-pv          
