--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ on:
   push:
     branches:
       - dev
+      - 'rel/**'
 jobs:
   build-and-push-to-docker:
     runs-on: ubuntu-latest
@@ -39,12 +40,12 @@ jobs:
           java-version: 1.8
       - name: Build and install incubator-streampipes with Maven
         working-directory: ./incubator-streampipes
-        run: mvn clean install -DskipTests -Denforcer.skip
+        run: mvn clean install javadoc:aggregate
       - name: Checkout
         uses: actions/checkout@v1
       - name: Build Extensions with Maven
         working-directory: ./
-        run: mvn clean package javadoc:aggregate -U -DskipTests -Denforcer.skip
+        run: mvn clean package javadoc:aggregate -U
       - name: Set env variables for Docker builds
         run: |
           echo "::set-env name=DOCKER_CLI_EXPERIMENTAL::enabled"
